# stackism

./: .gitignore  Justfile  README.md  todo.txt
example/: Caddyfile  README.md
example/functions/: content.wasm  kvplugin.wasm
example/www/: app.html
example/www/reverse/: .ftpx.json  Cargo.toml  cat.c  index.html  reverse.wasm
example/www/test/: index.html  test.wasm
src/content/: Cargo.toml
src/content/src/: lib.rs
src/ftp/: go.mod  go.sum  main.go
src/kvplugin/: Cargo.toml
src/kvplugin/src/: lib.rs
src/reverse/: go.mod  main.go  reverse.wasm
src/web/: go.mod  go.sum  main.go
